--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </svg>
 
     <!-- Título y botón -->
-    <h1>🎂 ¡Feliz Cumpleaños Madrina! 🎉</h1>
+    <h1>🎂 ¡Feliz Cumpleaños Arely! 🎉</h1>
     <button id="mostrarMensaje">Ver Mensaje Especial</button>
 
     <!-- Mensaje oculto -->
